# metal-flash-sdpa

./: .gitignore  LICENSE  MANIFEST.in  README.md  THIRD_PARTY_LICENSES  pyproject.toml  setup.py
.github/workflows/: ci.yml
benchmarks/: bench_causal_training.py  bench_forward.py  run_simpletuner_training.py
csrc/: mfa_bridge.mm
csrc/mfa/: Metal.cpp  ccv_nnc_mfa.cpp  ccv_nnc_mfa.hpp  ccv_nnc_mfa_add.cpp  ccv_nnc_mfa_attention.cpp  ccv_nnc_mfa_attention.hpp  ccv_nnc_mfa_cast.cpp  ccv_nnc_mfa_cast.hpp  ccv_nnc_mfa_defines.hpp  ccv_nnc_mfa_depalettize.cpp  ccv_nnc_mfa_error.cpp  ccv_nnc_mfa_error.hpp  ccv_nnc_mfa_gelu.cpp  ccv_nnc_mfa_gemm.cpp  ccv_nnc_mfa_gemm.hpp  ccv_nnc_mfa_gemv.cpp  ccv_nnc_mfa_hash.hpp  ccv_nnc_mfa_segmented_gemm.cpp  ccv_nnc_mfa_segmented_gemm.hpp  ccv_nnc_mfa_swish.cpp  ccv_nnc_mfa_swish.hpp  makefile
csrc/mfa/v2/: AddDescriptor.cpp  AddDescriptor.hpp  AttentionDescriptor.cpp  AttentionDescriptor.hpp  AttentionKernel+Precompiled.cpp  AttentionKernel.cpp  AttentionKernel.hpp  AttentionKernelDescriptor.cpp  AttentionKernelDescriptor.hpp  AttentionKernelType.hpp  AttentionOperand.hpp  CMulDescriptor.cpp  CMulDescriptor.hpp  CastDescriptor.cpp  CastDescriptor.hpp  CastKernel.cpp  CastKernel.hpp  CodeWriter.cpp  CodeWriter.hpp  DeviceProperties.hpp  GEMMDescriptor.cpp  GEMMDescriptor.hpp  GEMMHeaders.cpp  GEMMHeaders.hpp  GEMMKernel+Precompiled.cpp  GEMMKernel.cpp  GEMMKernel.hpp  GEMMKernelDescriptor.cpp  GEMMKernelDescriptor.hpp  GEMMOperandPrecision.hpp  GeluDescriptor.cpp  GeluDescriptor.hpp  NAAttentionDescriptor.cpp  NAAttentionDescriptor.hpp  NAAttentionKernel.cpp  NAAttentionKernel.hpp  NAAttentionKernelDescriptor.cpp  NAAttentionKernelDescriptor.hpp  NAMatMulDescriptor.cpp  NAMatMulDescriptor.hpp  (+16 more)
csrc/nnc/: ccv_nnc.h  mfa
metal_flash_sdpa/: __init__.py
tests/: conftest.py  test_backward.py  test_causal.py  test_diffusers.py  test_forward.py  test_integration.py  test_simpletuner_integration.py
