[build-system]
requires = ["setuptools", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "metal-flash-sdpa"
version = "0.1.0"
description = "Metal Flash Attention for PyTorch MPS devices"
requires-python = ">=3.10"
dependencies = ["torch>=2.1"]
license = "MIT"
readme = "README.md"
authors = [{name = "Alli Price"}]

[project.urls]
Homepage = "https://github.com/alliprice/metal-flash-sdpa"
Repository = "https://github.com/alliprice/metal-flash-sdpa"
Issues = "https://github.com/alliprice/metal-flash-sdpa/issues"

[project.license-files]
paths = ["LICENSE", "THIRD_PARTY_LICENSES"]
