[build-system]
requires = ["setuptools", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "mps-flash-sdpa"
version = "0.1.0"
description = "Metal Flash Attention for PyTorch MPS devices"
requires-python = ">=3.10"
dependencies = ["torch>=2.1"]
license = {text = "MIT"}
readme = "README.md"
authors = [{name = "Alli Price"}]

[project.urls]
Homepage = "https://github.com/alliprice/metal-flash-sdpa"
Repository = "https://github.com/alliprice/metal-flash-sdpa"
Issues = "https://github.com/alliprice/metal-flash-sdpa/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
